--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
+    <meta property="og:image" content="https://raw.githubusercontent.com/piratheon/piratheon/refs/heads/main/.github/preview.png"/>   
 </head>
 <body class="dark-mode">
 
